--- a/Eutropia_CRUD/news/templates/index.html
+++ b/Eutropia_CRUD/news/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <form method="POST" action="/nws">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div>
             <br>
@@ -24,13 +24,10 @@
             <div>
                 <p>News Details::</p>{{ form.newsDetails }}
             </div>
-            <!-- <div>
-                <p>Employee Email:</p>{{ form.eemail }}
+            <div class="form-group">
+                <label for="image">Image</label>
+                <input type="file" class="form-control-file" id="image" name="image">
             </div>
-            <div>
-                <p>Employee contact:</p>{{ form.econtact }}
-            </div>
-            <div> -->
                 <br>
                 <button type="submit">Submit</button>
             </div>
